# LLaMA-Factory

./: .gitignore  Cargo.toml  train_2024-12-03-16-45-31.yaml  train_toolace.yaml
data/: dataset_info.json
src/llamafactory/data/processors/: code_converter.py  supervised.py
src/llamafactory/data/processors/rust_converter/: Cargo.toml  __init__.py
src/llamafactory/data/processors/rust_converter/src/: lib.rs
src/llamafactory/data/processors/rust_converter/src/models/: data_formats.rs  features.rs  mod.rs  packing.rs  runtime.rs  tokenization.rs
src/llamafactory/webui/components/: data.py
train_2024-12-03-16-45-31/runs/Dec03_20-22-21_mysterious-curie/: events.out.tfevents.1733257468.mysterious-curie.231419.0
train_2024-12-03-16-45-31/runs/Dec03_20-34-27_mysterious-curie/: events.out.tfevents.1733258072.mysterious-curie.232423.0
train_2024-12-03-16-45-31/runs/Dec03_20-58-17_mysterious-curie/: events.out.tfevents.1733259526.mysterious-curie.232745.0
train_2024-12-03-16-45-31/runs/Dec03_21-08-04_mysterious-curie/: events.out.tfevents.1733260144.mysterious-curie.233026.0
train_2024-12-03-16-45-31/runs/Dec03_21-13-05_mysterious-curie/: events.out.tfevents.1733260469.mysterious-curie.233431.0
train_2024-12-03-16-45-31/runs/Dec03_21-41-27_mysterious-curie/: events.out.tfevents.1733262170.mysterious-curie.235028.0
train_2024-12-03-16-45-31/runs/Dec03_21-43-00_mysterious-curie/: events.out.tfevents.1733262199.mysterious-curie.235851.0
train_2024-12-03-16-45-31/runs/Dec03_21-44-58_mysterious-curie/: events.out.tfevents.1733262310.mysterious-curie.236217.0
(+4 files in other folders)
