[package]
name = "rust_converter"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_converter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.2", features = ["extension-module"] }
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
tokenizers = "0.21.0"
